--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,15 +26,18 @@
 				<div class="contact-method">
 					<span class="icon alt fa-envelope"></span>
 					<h3>Email</h3>
-					<a href="#">{{ site.email }}</a>
+					jonyu [dot] vortex [at] gmail [dot] com
+					<!-- <a href="#">{{ site.email }}</a> -->
 				</div>
 			</section>
 			<section>
+				<!--
 				<div class="contact-method">
 					<span class="icon alt fa-phone"></span>
 					<h3>Phone</h3>
 					<span>{{ site.phone }}</span>
 				</div>
+			    -->
 			</section>
 			<section>
 				<div class="contact-method">
@@ -101,7 +104,8 @@
 			<ul class="copyright">
 				<li>&copy; {{ site.title }} {{ site.subtitle }}</li>
 				<li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
-				<li>Jekyll integration: <a href="http://andrewbanchi.ch" target="_blank">Andrew Banchich</a></li>
+				<!-- <li>Jekyll integration: <a href="http://andrewbanchi.ch" target="_blank">Andrew Banchich</a> </li> -->
+				<li>Jekyll integration: Andrew Banchich</li>
 
 			</ul>
 		</div>
