--- a/_layouts/allposts.html
+++ b/_layouts/allposts.html
@@ -25,8 +25,9 @@
 	    <h1>{{ post.title }}</h1>
 	  </header>
 	  {% if post.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ post.image }}" alt="" /></span>{% endif %}
-	  {% if post.date %}<p>{{ post.date }}</p>{% endif %}
-	  <p>{{ post.content }}</p>
+	  <!--  {% if post.date %}<p>{{ post.date }}</p>{% endif %}  -->
+	  
+    <p>{{ post.content }}</p>
 	  {% endif %}
           {% endfor %}
 	</div>
