--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@
             <div class="content">
                 <p style="text-transform: uppercase;">{{ site.description }}</p>
                 <ul class="actions">
-                    <li><a href="#one" class="button next scrolly">Get Started</a></li>
+                    <li><a href="#one" class="button next scrolly">Explore</a></li>
                 </ul>
             </div>
         </div>
@@ -33,7 +33,7 @@
         <!-- One -->
         {% include tiles.html %}
 
-        <!-- Two -->
+        <!-- Two 
         <section id="two">
             <div class="inner">
                 <header class="major">
@@ -45,6 +45,7 @@
                 </ul>
             </div>
         </section>
+        -->
 
     </div>
 
