--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,13 +23,14 @@
 			<h1>{{ page.title }}</h1>
 		</header>
 		{% if page.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ page.image }}" alt="" /></span>{% endif %}
-		{{ content }}
+		<p>{{ content }}</p>
+
 	</div>
 </section>
 
 </div>
 
-    {% include footer.html %}
+ <!--   {% include footer.html %}  -->
 
 </body>
 
