Cleaned up files and edited write ups. Added 404.md. Changed _config.yml to show 3 tiles.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,19 +30,20 @@
 					<!-- <a href="#">{{ site.email }}</a> -->
 				</div>
 			</section>
+
+		<!--
 			<section>
-				<!--
 				<div class="contact-method">
 					<span class="icon alt fa-phone"></span>
 					<h3>Phone</h3>
 					<span>{{ site.phone }}</span>
 				</div>
-			    -->
 			</section>
+		-->
 			<section>
 				<div class="contact-method">
 					<span class="icon alt fa-home"></span>
-					<h3>Address</h3>
+					<h3>Location</h3>
 					<span>
 					{% if site.street_address %}
 					    {{ site.street_address }}<br />
