Was trying to get URL shorter and not break image links on projects page.

--- a/_includes/footer_orig.html
+++ b/_includes/footer_orig.html
@@ -26,12 +26,9 @@
 				<div class="contact-method">
 					<span class="icon alt fa-envelope"></span>
 					<h3>Email</h3>
-					jonyu [dot] vortex [at] gmail [dot] com
-					<!-- <a href="#">{{ site.email }}</a> -->
+					<a href="#">{{ site.email }}</a>
 				</div>
 			</section>
-
-		<!--
 			<section>
 				<div class="contact-method">
 					<span class="icon alt fa-phone"></span>
@@ -39,11 +36,10 @@
 					<span>{{ site.phone }}</span>
 				</div>
 			</section>
-		-->
 			<section>
 				<div class="contact-method">
 					<span class="icon alt fa-home"></span>
-					<h3>Location</h3>
+					<h3>Address</h3>
 					<span>
 					{% if site.street_address %}
 					    {{ site.street_address }}<br />
@@ -104,10 +100,9 @@
 			</ul>
 			<ul class="copyright">
 				<li>&copy; {{ site.title }} {{ site.subtitle }}</li>
-				
-				<!--<li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li> -->
+				<li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li>
 				<!-- <li>Jekyll integration: <a href="http://andrewbanchi.ch" target="_blank">Andrew Banchich</a> </li> -->
-				<!-- <li>Jekyll integration: Andrew Banchich</li> -->
+				<li>Jekyll integration: Andrew Banchich</li>
 
 			</ul>
 		</div>
