--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,6 @@
 		<header class="major">
 			<h1>{{ page.title }}</h1>
 		</header>
-		{% if page.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ page.image }}" alt="" /></span>{% endif %}
 		<p>{{ content }}</p>
 
 	</div>
@@ -30,7 +29,7 @@
 
 </div>
 
- <!--   {% include footer.html %}  -->
+{% include footer_no_contact.html %} 
 
 </body>
 
